brの大幅な削減　綺麗なhtmlを目指す

--- a/attention.html
+++ b/attention.html
@@ -16,47 +16,46 @@
   <div id="all">
 
     <div id="title">
-      <img src="assets/img/tlogo.png" class="rogo" alt="YOYOGI39">
-      <br><br>
+      <a href="https://mioyuki.github.io/Alfa-yoyogi-39/"><img src="assets/img/tlogo.png" class="rogo"
+          alt="YOYOGI39"></a>
       <div class="hr"></div>
     </div>
 
     <div id="text">
-      <br>
+      <br />
       <h1 class="attention">非常事態発生</h1>
-      <br>
+      <br />
 
 
-      <h3>無事にスマホ内部に潜入が出来たか…と思った矢先に、<br>
-        なんと、案内AIが暴走しスマホ内に閉じ込められてしまった。<br>
-        前に進もうにも、順路にはロックが掛かっており進めない。<br>
-        どうにかしてロックを解き、スマートフォンから脱出しよう……<br><br>
+      <h3>無事にスマホ内部に潜入が出来たか…と思った矢先に、<br />
+        なんと、案内AIが暴走しスマホ内に閉じ込められてしまった。<br />
+        前に進もうにも、順路にはロックが掛かっており進めない。<br />
+        どうにかしてロックを解き、スマートフォンから脱出しよう……<br /><br />
         <span class="red">「できる物ならやってみて下さい。この"スマートフォン"という電子の迷宮からの脱出を」</span>
-      </h3><br>
+      </h3><br />
 
       <img src="assets/img/timg.png" class="toplogo" alt="スマホカラダッシュツセヨ">
-      <br><br><br><br>
+      <br /><br /><br /><br />
       <h1><a href="quiz.html" class="btn-flat-border">スマートフォンからの脱出</a></h1>
-      <br><br><br>
+      <br /><br /><br />
     </div>
 
-    <div id=cr>
-      <div class="hr"></div>
-      <br>
-      授業主催： N・S高<br>
-      協力：株式会社SCRAP<br>
-      企画制作：N・S高生<br>
-      <br>
+    <div id="cr">
+      <div class="hr rem2"></div>
+
+      授業主催： N・S高<br />
+      協力：株式会社SCRAP<br />
+      企画制作：N・S高生<br />
+      <br />
       「リアル脱出ゲーム」は株式会社SCRAPの登録商標です。
-      <br><br>
-      株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br>
-      生徒が制作したものであり、<br>
+      <br /><br />
+      株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br />
+      生徒が制作したものであり、<br />
       SCRAPが主催/公認するものではありません。
-      <br><br>
-      <div class="hr"></div>
-      <br><br>
+
+      <div class="hr rem2"></div>
+
       © 2021 YOYOGI39
-      <br><br><br>
     </div>
 
   </div>
