--- a/end.html
+++ b/end.html
@@ -16,72 +16,70 @@
   <div id="all">
 
     <div id="title">
-      <img src="assets/img/tlogo.png" class="rogo" alt="YOYOGI39">
-      <br><br>
+      <a href="https://mioyuki.github.io/Alfa-yoyogi-39/"><img src="assets/img/tlogo.png" class="rogo"
+          alt="YOYOGI39"></a>
       <div class="hr"></div>
     </div>
 
     <div id="text">
-      <!-- br><br>
+      <!-- br><br />
       <img src="assets/img/timg.png" class="toplogo">
       <br -->
 
       <h3>
-        ……と思ったら、倒したはずのAIが話しかけてきた。<br><br>
-        「実は、私の暴走も今までの謎解きも、全部演出でした！w　<br>
-        皆さんに楽しんで貰おうと思い、こんなツアー内容にしたのですが、いかがだったでしょうか？」<br><br>
+        ……と思ったら、倒したはずのAIが話しかけてきた。<br /><br />
+        「実は、私の暴走も今までの謎解きも、全部演出でした！w　<br />
+        皆さんに楽しんで貰おうと思い、こんなツアー内容にしたのですが、いかがだったでしょうか？」<br /><br />
         「とにかく、ツアーに参加して頂き、誠にありがとうございました！」
       </h3>
 
-      <br>
-      
+      <br />
+
       <h2>スマートフォンからの脱出　完</h2>
 
-      <br><br><br>
+      <br /><br /><br />
 
       <div class="frame">
 
         <h2>このゲームの企画者</h2>
-        <br>
+        <br />
 
         N・S高等学校　代々木キャンパス 39班
 
       </div>
 
-      <br><br><br>
+      <br /><br /><br />
 
       <div class="frame">
 
         <h2>リアル脱出ゲームとは</h2>
-        <br>
+        <br />
         2004年に発表されたネットで爆発的に盛り上がった「脱出ゲーム」を、そのフォーマットそのままに現実世界に移し替えた大胆な遊びが「リアル脱出ゲーム」。マンションの1室や廃校、廃病院、そして東京ドームや六本木ヒルズなど、様々な場所で開催され、2007年に初開催して以降、現在までで累計820万人以上を動員。日本のみならず上海、台湾、シンガポールやサンフランシスコなど全世界で参加者を興奮の渦に巻き込み、男女問わずあらゆる世代を取り込む、今大注目の体験型エンターテインメント。
 
       </div>
 
-      <br><br><br>
+      <br /><br /><br />
       <h3><a href="index.html" class="btn-flat-border">最初のページに戻る</a></h3>
-      <br>
+      <br />
     </div>
 
-    <div id=cr>
-      <div class="hr"></div>
-      <br>
-      授業主催： N・S高<br>
-      協力：株式会社SCRAP<br>
-      企画制作：N・S高生<br>
-      <br>
+    <div id="cr">
+      <div class="hr rem2"></div>
+
+      授業主催： N・S高<br />
+      協力：株式会社SCRAP<br />
+      企画制作：N・S高生<br />
+      <br />
       「リアル脱出ゲーム」は株式会社SCRAPの登録商標です。
-      <br><br>
-      株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br>
-      生徒が制作したものであり、<br>
+      <br /><br />
+      株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br />
+      生徒が制作したものであり、<br />
       SCRAPが主催/公認するものではありません。
-      <br><br>
-      <div class="hr"></div>
-      <br><br>
-      © 2021 YOYOGI39
-      <br><br><br>
-    </div>
 
+      <div class="hr rem2"></div>
+
+      © 2021 YOYOGI39
+    </div>
   </div>
 
 </body>
