--- a/final.html
+++ b/final.html
@@ -16,42 +16,41 @@
   <div id="all">
 
     <div id="title">
-      <img src="assets/img/tlogo.png" class="rogo" alt="YOYOGI39">
-      <br><br>
+      <a href="https://mioyuki.github.io/Alfa-yoyogi-39/"><img src="assets/img/tlogo.png" class="rogo"
+          alt="YOYOGI39"></a>
       <div class="hr"></div>
     </div>
 
     <div id="text">
-      <!-- br><br>
+      <!-- br><br />
       <img src="https://mioyuki.github.io/Alfa-yoyogi-39/assets/img/timg.png" class="toplogo">
       <br -->
       <h2>脱出成功！</h2>
       <h3>
-        暴走したAIに勝利した！<br>
-        最後のロックを解き、<br>
-        無事スマートフォンから脱出することが出来た！<br><br>
+        暴走したAIに勝利した！<br />
+        最後のロックを解き、<br />
+        無事スマートフォンから脱出することが出来た！<br /><br />
       </h3>
       <h3><a href="end.html" class="btn-flat-border">その後……？</a></h3>
-      <br>
+      <br />
     </div>
 
-    <div id=cr>
-      <div class="hr"></div>
-      <br>
-      授業主催： N・S高<br>
-      協力：株式会社SCRAP<br>
-      企画制作：N・S高生<br>
-      <br>
+    <div id="cr">
+      <div class="hr rem2"></div>
+
+      授業主催： N・S高<br />
+      協力：株式会社SCRAP<br />
+      企画制作：N・S高生<br />
+      <br />
       「リアル脱出ゲーム」は株式会社SCRAPの登録商標です。
-      <br><br>
-      株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br>
-      生徒が制作したものであり、<br>
+      <br /><br />
+      株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br />
+      生徒が制作したものであり、<br />
       SCRAPが主催/公認するものではありません。
-      <br><br>
-      <div class="hr"></div>
-      <br><br>
+
+      <div class="hr rem2"></div>
+
       © 2021 YOYOGI39
-      <br><br><br>
     </div>
 
   </div>
