--- a/quiz.html
+++ b/quiz.html
@@ -16,8 +16,8 @@
   <div id="stage">
 
     <div id="title">
-      <img src="assets/img/tlogo.png" class="rogo" alt="YOYOGI39">
-      <br><br>
+      <a href="https://mioyuki.github.io/Alfa-yoyogi-39/"><img src="assets/img/tlogo.png" class="rogo"
+          alt="YOYOGI39"></a>
       <div class="hr"></div>
     </div>
 
@@ -32,27 +32,27 @@
 
         <h3>
           ここが最初のアプリ、Twitterのようだ。
-          <br>
+          <br />
           以下の2問を解けば、次のアプリへの道が開くらしい。
-          <br>
+          <br />
           問題を解き、ロックを解除しよう。
-          <br>
+          <br />
         </h3>
 
         <h2>第1問</h2>
-        <br>
+        <br />
         <h1 class="nazo">
           銅鑼 → 17
-          <br>
+          <br />
           味噌 → 35
-          <br>
+          <br />
           空 → ??
-          <br>
+          <br />
         </h1>
 
         <!-- img class="toplogo" src="assets/img/t1.png" alt="1-1Twitter問題" -->
 
-        <br><br>
+        <br /><br />
 
         <!-- STAGE1問題セクション　ここまで -->
 
@@ -66,50 +66,50 @@
 
         </div>
 
-        <br><br><br>
+        <br /><br /><br />
 
         <div class="frame">
 
           <h2>ヒント集</h2>
 
-          <br>
+          <br />
           <h4>謎のヒントと解答は下から確認できる。</h4>
 
           <details>
             <summary class="btn-flat-border">第1問 - ヒント</summary>
-            <br><br>
+            <br /><br />
             カタカナに直そう
-            <br>
+            <br />
           </details>
-          <br>
+          <br />
           <details>
             <summary class="btn-flat-border">第1問 - 解答</summary>
-            <br><br>
+            <br /><br />
             56
-            <br>
+            <br />
           </details>
 
         </div>
 
-        <br><br><br>
+        <br /><br /><br />
 
         <h2>第2問</h2>
-        <br><br>
+        <br /><br />
 
         <h1 class="nazo">
           R8 → 2026
-          <br>
+          <br />
           R1 → 2019
-          <br>
+          <br />
           H13 → 2001
-          <br>
+          <br />
           H18 → ????
-          <br>
+          <br />
         </h1>
 
         <!-- img class="toplogo" src="assets/img/t2.png" alt="1-2Twitter問題" -->
 
-        <br><br>
+        <br /><br />
 
         <!-- STAGE1問題セクション　ここまで -->
 
@@ -124,35 +124,35 @@
 
         </div>
 
-        <br><br><br>
+        <br /><br /><br />
 
         <div class="frame">
 
           <h2>ヒント集</h2>
 
-          <br>
+          <br />
           <h4>謎のヒントと解答は下から確認できる。</h4>
 
           <details>
             <summary class="btn-flat-border">第2問 - ヒント</summary>
-            <br><br>
+            <br /><br />
             4桁の数字の後に“年”を付けよう
-            <br><br>
+            <br /><br />
             <img class="toplogo" src="assets/img/t2h.png" alt="1-2Twitterヒント">
 
-            <br>
+            <br />
           </details>
-          <br>
+          <br />
           <details>
             <summary class="btn-flat-border">第2問 - 解答</summary>
-            <br><br>
+            <br /><br />
             2006
-            <br>
+            <br />
           </details>
 
         </div>
 
-        <br><br><br>
+        <br /><br /><br />
 
         <!-- STAGE1解答入力セクション　ここまで -->
 
@@ -165,8 +165,8 @@
                 <h2>STAGE：1 クリア！</h2>
               </div>
               <div class="clear-message__content">
-                <p>Twitterのロックが解除された！</p><br>
-                <p>次のアプリへ進もう。</p><br>
+                <p>Twitterのロックが解除された！</p><br />
+                <p>次のアプリへ進もう。</p><br />
                 <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'"
                   class="btn-flat-border">次のステージへ</button>
               </div>
@@ -187,23 +187,23 @@
         <h2>STAGE：2 YouTubeの謎</h2>
         <h3>
           ここが2つ目かつ最後のアプリ、YouTubeのようだ。
-          <br>
+          <br />
           Twitterのように以下の2問を解けば、脱出出来るらしい！
-          <br>
+          <br />
           問題を解き、スマホから脱出しよう！
-          <br><br>
+          <br /><br />
           ※2問ともひらがなで回答しよう
-          <br><br>
+          <br /><br />
         </h3>
 
         <h2>第1問</h2>
-        <br><br><br>
+        <br /><br /><br />
 
         <div class="hr"></div>
         <img class="toplogo" src="assets/img/y1.png" alt="2-1YouTube問題">
         <div class="hr"></div>
 
-        <br><br>
+        <br /><br />
 
         <!-- STAGE2問題セクション　ここまで -->
 
@@ -218,41 +218,41 @@
 
         </div>
 
-        <br><br><br>
+        <br /><br /><br />
 
         <div class="frame">
 
           <h2>ヒント集</h2>
 
-          <br>
+          <br />
           <h4>謎のヒントと解答は下から確認できる。</h4>
 
           <details>
             <summary class="btn-flat-border">第1問 - ヒント</summary>
-            <br><br>
+            <br /><br />
             <img class="toplogo" src="assets/img/y1h.png" alt="2-1YouTubeヒント">
-            <br>
+            <br />
           </details>
-          <br>
+          <br />
           <details>
             <summary class="btn-flat-border">第1問 - 解答</summary>
-            <br><br>
+            <br /><br />
             ようつべ
-            <br>
+            <br />
           </details>
 
         </div>
 
-        <br><br><br>
+        <br /><br /><br />
 
         <h2>第2問</h2>
-        <br><br><br>
+        <br /><br /><br />
 
         <div class="hr"></div>
         <img class="toplogo" src="assets/img/y2.png" alt="2-2YouTube問題">
         <div class="hr"></div>
 
-        <br><br>
+        <br /><br />
 
         <!-- STAGE2問題セクション　ここまで -->
 
@@ -267,34 +267,34 @@
 
         </div>
 
-        <br><br><br>
+        <br /><br /><br />
 
         <div class="frame">
 
           <h2>ヒント集</h2>
 
-          <br>
+          <br />
           <h4>謎のヒントと解答は下から確認できる。</h4>
 
           <details>
             <summary class="btn-flat-border">第2問 - ヒント</summary>
-            <br><br>
+            <br /><br />
             アイコンの状態に注目
-            <br>
+            <br />
           </details>
-          <br>
+          <br />
           <details>
             <summary class="btn-flat-border">第2問 - 解答</summary>
-            <br><br>
+            <br /><br />
             うそつき
-            <br>
+            <br />
           </details>
 
         </div>
 
         <!-- STAGE2解答入力セクション　ここまで -->
 
-        <br><br><br>
+        <br /><br /><br />
 
         <!-- STAGE2クリア画面　ここから -->
         <section v-if="clear['stage2']" v-bind:class="{isClear:clear['stage2']}" class="section section--clear">
@@ -304,8 +304,8 @@
                 <h2>STAGE：2 クリア！</h2>
               </div>
               <div class="clear-message__content">
-                <p>YouTubeのロックが解除された！</p><br>
-                <p>さあ、脱出しよう。</p><br>
+                <p>YouTubeのロックが解除された！</p><br />
+                <p>さあ、脱出しよう。</p><br />
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'"
                   class="btn-flat-border">次のステージへ</button>
               </div>
@@ -322,26 +322,26 @@
 
         <!-- STAGE3問題セクション　ここから -->
 
-        <br>
+        <br />
 
         <h3>
           全てのロックを解除し無事脱出……？
-          <br><br>
+          <br /><br />
           <span class="red">「……この私が、素直にそうさせると思いましたか？」</span>
-          <br><br>
-          暴走したAIが立ち塞がってきた。<br>
+          <br /><br />
+          暴走したAIが立ち塞がってきた。<br />
           AIを倒し、今度こそ脱出しよう。
-          <br><br>
+          <br /><br />
         </h3>
 
         <h2>FINALSTAGE：最終決戦</h2>
-        <br><br><br>
+        <br /><br /><br />
 
         <div class="hr"></div>
         <img class="toplogo" src="assets/img/fin.png" alt="main">
         <div class="hr"></div>
 
-        <br><br>
+        <br /><br />
 
         <!-- STAGE3問題セクション　ここまで -->
 
@@ -355,57 +355,57 @@
 
         </div>
 
-        <br><br><br>
+        <br /><br /><br />
 
         <div class="frame">
 
           <h2>ヒント集</h2>
 
-          <br>
+          <br />
           <h4>謎のヒントと解答は下から確認できる。</h4>
 
           <details>
             <summary class="btn-flat-border">最終問題 - ヒント①</summary>
-            <br><br>
+            <br /><br />
             赤線1本+黒線3本の計の4本の線、といえば？
-            <br>
+            <br />
           </details>
-          <br>
+          <br />
 
           <details>
             <summary class="btn-flat-border">最終問題 - ヒント②</summary>
-            <br><br>
+            <br /><br />
             分数？
-            <br>
+            <br />
           </details>
-          <br>
+          <br />
 
           <details>
             <summary class="btn-flat-border">最終問題 - ヒント③</summary>
-            <br><br>
+            <br /><br />
             通分してみよう
-            <br>
+            <br />
           </details>
-          <br>
+          <br />
 
           <details>
             <summary class="btn-flat-border">最終問題 - ヒント④</summary>
-            <br><br>
+            <br /><br />
             26個あるものとは？
-            <br>
+            <br />
           </details>
-          <br>
+          <br />
 
           <details>
             <summary class="btn-flat-border">最終問題 - 解答</summary>
-            <br><br>
+            <br /><br />
             Twitter
-            <br>
+            <br />
           </details>
 
         </div>
 
-        <br><br><br>
+        <br /><br /><br />
 
         <!-- STAGE3解答入力セクション　ここまで -->
 
@@ -415,23 +415,22 @@
 
     </div>
 
-    <div id=cr>
-      <div class="hr"></div>
-      <br>
-      授業主催： N・S高<br>
-      協力：株式会社SCRAP<br>
-      企画制作：N・S高生<br>
-      <br>
+    <div id="cr">
+      <div class="hr rem2"></div>
+
+      授業主催： N・S高<br />
+      協力：株式会社SCRAP<br />
+      企画制作：N・S高生<br />
+      <br />
       「リアル脱出ゲーム」は株式会社SCRAPの登録商標です。
-      <br><br>
-      株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br>
-      生徒が制作したものであり、<br>
+      <br /><br />
+      株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br />
+      生徒が制作したものであり、<br />
       SCRAPが主催/公認するものではありません。
-      <br><br>
-      <div class="hr"></div>
-      <br><br>
+
+      <div class="hr rem2"></div>
+
       © 2021 YOYOGI39
-      <br><br><br>
     </div>
 
   </div>
