br削減プロジェクト

--- a/attention.html
+++ b/attention.html
@@ -22,10 +22,7 @@
     </div>
 
     <div id="text">
-      <br />
-      <h1 class="attention">非常事態発生</h1>
-      <br />
-
+      <h1 class="attention rem2">非常事態発生</h1>
 
       <h3>無事にスマホ内部に潜入が出来たか…と思った矢先に、<br />
         なんと、案内AIが暴走しスマホ内に閉じ込められてしまった。<br />
@@ -35,9 +32,9 @@
       </h3><br />
 
       <img src="assets/img/timg.png" class="toplogo" alt="スマホカラダッシュツセヨ">
-      <br /><br /><br /><br />
+
       <h1><a href="quiz.html" class="btn-flat-border">スマートフォンからの脱出</a></h1>
-      <br /><br /><br />
+
     </div>
 
     <div id="cr">
