br大量削減プロジェクト大成功

--- a/final.html
+++ b/final.html
@@ -6,8 +6,8 @@
   <title>脱出成功！ | ProjectN</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="shortcut icon" href="https://mioyuki.github.io/Alfa-yoyogi-39/assets/img/favicon.ico">
-  <link rel="stylesheet" href="https://mioyuki.github.io/Alfa-yoyogi-39/assets/css/style.css">
+  <link rel="shortcut icon" href="assets/img/favicon.ico">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -22,9 +22,6 @@
     </div>
 
     <div id="text">
-      <!-- br><br />
-      <img src="https://mioyuki.github.io/Alfa-yoyogi-39/assets/img/timg.png" class="toplogo">
-      <br -->
       <h2>脱出成功！</h2>
       <h3>
         暴走したAIに勝利した！<br />
@@ -32,7 +29,6 @@
         無事スマートフォンから脱出することが出来た！<br /><br />
       </h3>
       <h3><a href="end.html" class="btn-flat-border">その後……？</a></h3>
-      <br />
     </div>
 
     <div id="cr">
