--- a/quiz.html
+++ b/quiz.html
@@ -67,7 +67,6 @@
         <div class="frame">
 
           <h2>ヒント集</h2>
-
           <br />
           <h4>謎のヒントと解答は下から確認できる。</h4>
 
@@ -117,7 +116,6 @@
         <div class="frame">
 
           <h2>ヒント集</h2>
-
           <br />
           <h4>謎のヒントと解答は下から確認できる。</h4>
 
@@ -180,13 +178,10 @@
         </h3>
 
         <h2>第1問</h2>
-        <br /><br /><br />
 
-        <div class="hr"></div>
+        <div class="hr rem2t"></div>
         <img class="toplogo" src="assets/img/y1.png" alt="2-1YouTube問題">
-        <div class="hr"></div>
-
-        <br /><br />
+        <div class="hr rem2b"></div>
 
         <!-- STAGE2問題セクション　ここまで -->
 
@@ -201,12 +196,9 @@
 
         </div>
 
-        <br /><br /><br />
-
         <div class="frame">
 
           <h2>ヒント集</h2>
-
           <br />
           <h4>謎のヒントと解答は下から確認できる。</h4>
 
@@ -214,28 +206,22 @@
             <summary class="btn-flat-border">第1問 - ヒント</summary>
             <br /><br />
             <img class="toplogo" src="assets/img/y1h.png" alt="2-1YouTubeヒント">
-            <br />
           </details>
-          <br />
+
           <details>
             <summary class="btn-flat-border">第1問 - 解答</summary>
             <br /><br />
             ようつべ
-            <br />
           </details>
 
         </div>
 
-        <br /><br /><br />
-
+        <br />
         <h2>第2問</h2>
-        <br /><br /><br />
 
-        <div class="hr"></div>
+        <div class="hr rem2t"></div>
         <img class="toplogo" src="assets/img/y2.png" alt="2-2YouTube問題">
-        <div class="hr"></div>
-
-        <br /><br />
+        <div class="hr rem2b"></div>
 
         <!-- STAGE2問題セクション　ここまで -->
 
@@ -250,12 +236,9 @@
 
         </div>
 
-        <br /><br /><br />
-
         <div class="frame">
 
           <h2>ヒント集</h2>
-
           <br />
           <h4>謎のヒントと解答は下から確認できる。</h4>
 
@@ -263,21 +246,17 @@
             <summary class="btn-flat-border">第2問 - ヒント</summary>
             <br /><br />
             アイコンの状態に注目
-            <br />
           </details>
-          <br />
+
           <details>
             <summary class="btn-flat-border">第2問 - 解答</summary>
             <br /><br />
             うそつき
-            <br />
           </details>
 
         </div>
 
         <!-- STAGE2解答入力セクション　ここまで -->
-
-        <br /><br /><br />
 
         <!-- STAGE2クリア画面　ここから -->
         <section v-if="clear['stage2']" v-bind:class="{isClear:clear['stage2']}" class="section section--clear">
@@ -318,13 +297,10 @@
         </h3>
 
         <h2>FINALSTAGE：最終決戦</h2>
-        <br /><br /><br />
 
-        <div class="hr"></div>
+        <div class="hr rem2t"></div>
         <img class="toplogo" src="assets/img/fin.png" alt="main">
-        <div class="hr"></div>
-
-        <br /><br />
+        <div class="hr rem2b"></div>
 
         <!-- STAGE3問題セクション　ここまで -->
 
@@ -338,8 +314,6 @@
 
         </div>
 
-        <br /><br /><br />
-
         <div class="frame">
 
           <h2>ヒント集</h2>
@@ -351,47 +325,35 @@
             <summary class="btn-flat-border">最終問題 - ヒント①</summary>
             <br /><br />
             赤線1本+黒線3本の計の4本の線、といえば？
-            <br />
           </details>
-          <br />
 
           <details>
             <summary class="btn-flat-border">最終問題 - ヒント②</summary>
             <br /><br />
             分数？
-            <br />
           </details>
-          <br />
 
           <details>
             <summary class="btn-flat-border">最終問題 - ヒント③</summary>
             <br /><br />
             通分してみよう
-            <br />
           </details>
-          <br />
 
           <details>
             <summary class="btn-flat-border">最終問題 - ヒント④</summary>
             <br /><br />
             26個あるものとは？
-            <br />
           </details>
-          <br />
 
           <details>
             <summary class="btn-flat-border">最終問題 - 解答</summary>
             <br /><br />
             Twitter
-            <br />
           </details>
 
         </div>
 
-        <br /><br /><br />
-
         <!-- STAGE3解答入力セクション　ここまで -->
-
 
       </div>
       <!-- STAGE3　ここまで -->
