--- a/end.html
+++ b/end.html
@@ -22,22 +22,15 @@
     </div>
 
     <div id="text">
-      <!-- br><br />
-      <img src="assets/img/timg.png" class="toplogo">
-      <br -->
 
-      <h3>
+      <h3 class="rem2b">
         ……と思ったら、倒したはずのAIが話しかけてきた。<br /><br />
         「実は、私の暴走も今までの謎解きも、全部演出でした！w　<br />
         皆さんに楽しんで貰おうと思い、こんなツアー内容にしたのですが、いかがだったでしょうか？」<br /><br />
         「とにかく、ツアーに参加して頂き、誠にありがとうございました！」
       </h3>
 
-      <br />
-
-      <h2>スマートフォンからの脱出　完</h2>
-
-      <br /><br /><br />
+      <h2 class="rem2b">スマートフォンからの脱出　おしまい！</h2>
 
       <div class="frame">
 
@@ -48,8 +41,6 @@
 
       </div>
 
-      <br /><br /><br />
-
       <div class="frame">
 
         <h2>リアル脱出ゲームとは</h2>
@@ -58,9 +49,8 @@
 
       </div>
 
-      <br /><br /><br />
       <h3><a href="index.html" class="btn-flat-border">最初のページに戻る</a></h3>
-      <br />
+
     </div>
 
     <div id="cr">
