--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     <div id="text">
       <img src="assets/img/tour.png" class="toplogo" alt="tour" />
       <h2>スマホ探検ツアーへようこそ！</h2>
-      <h3>
-        みなさんが普段、TwitterやYouTube、ゲームやネットサーフィンなど、
-        様々な用途で使用しているスマートフォン。
-        その中って、どういう仕組みになっているか気になりませんか？
-        今から、最先端テクノロジーを搭載した「マイクロライダー」に乗船し、
+      <h3>みなさんが普段、TwitterやYouTube、ゲームやネットサーフィンなど、<br>
+        様々な用途で使用しているスマートフォン。<br>
+        その中って、どういう仕組みになっているか気になりませんか？<br><br>
+        今から、最先端テクノロジーを搭載した「マイクロライダー」に乗船し、<br>
         スマートフォンの内部を探検してみましょう！
       </h3>
 
