クリアウィンドウ裏半透明追加

--- a/quiz.html
+++ b/quiz.html
@@ -21,8 +21,6 @@
       <div class="hr"></div>
     </div>
 
-
-
     <div id="text">
 
       <!-- STAGE1　ここから -->
@@ -147,7 +145,7 @@
         <!-- STAGE1-2　ここまで -->
 
         <!-- STAGE1クリア画面　ここから -->
-        <section v-bind:class="{isClear:clear['stage1']}" class="section section--clear">
+        <section v-bind:class="{isClear:clear['stage1']}" class="section section--clear　bgt">
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">
@@ -276,7 +274,7 @@
         <!-- STAGE2-2　ここまで -->
 
         <!-- STAGE2クリア画面　ここから -->
-        <section v-if="clear['stage2']" v-bind:class="{isClear:clear['stage2']}" class="section section--clear">
+        <section v-if="clear['stage2']" v-bind:class="{isClear:clear['stage2']}" class="section section--clear　bgt">
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">
