--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="スマートフォンからの脱出 | ProjectN" />
   <meta property="og:description" content="スマートフォンから脱出せよ" />
-  <meta property="og:url" content="https://mioyuki.github.io/Alfa-yoyogi-39/" />
+  <meta property="og:url" content="https://yoyogi39.ml" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/img/ogp2.png" />
   <meta property="og:image:width" content="1200" />
