--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="スマートフォンから脱出せよ" />
   <meta property="og:url" content="https://yoyogi39.ml" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/img/ogp2.png" />
+  <meta property="og:image" content="https://yoyogi39.ml/assets/img/ogp2.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta name="twitter:card" content="summary_large_image" />
