OGメッセージ変更

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="assets/img/favicon.ico" />
   <link rel="stylesheet" href="assets/css/style.css" />
 
-  <meta property="og:title" content="スマートフォンからの脱出 | ProjectN" />
+  <meta property="og:title" content="スマートフォンからの脱出　feat.YOYOGI39 | ProjectN" />
   <meta property="og:description" content="スマートフォンから脱出せよ" />
   <meta property="og:url" content="https://yoyogi39.ml" />
   <meta property="og:type" content="website" />
