--- a/final.html
+++ b/final.html
@@ -16,8 +16,7 @@
   <div id="all">
 
     <div id="title">
-      <a href="https://mioyuki.github.io/Alfa-yoyogi-39/"><img src="assets/img/tlogo.png" class="rogo"
-          alt="YOYOGI39"></a>
+      <img src="assets/img/tlogo.png" class="rogo" alt="YOYOGI39"></a>
       <div class="hr"></div>
     </div>
 
